<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.chois.test.viewmodel.booksearch.BookSearchViewModel" />

        <variable
            name="activity"
            type="com.chois.test.view.booksearch.BookSearchActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.booksearch.BookSearchActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_search_constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/search_search_edittext"
                style="@style/RoundShapeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_edittext_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/search_search_textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/search_search_textview"
                style="@style/SearchActionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->activity.getSearchData()}"
                android:text="@string/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_search_constraintlayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_search_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/search_error_constraintlayout"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_error_constraintlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_search_recyclerview">

                <TextView
                    android:id="@+id/search_error_textview"
                    style="@style/ErrorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/error_msg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/search_retry_textview"
                    style="@style/RetryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->activity.adapterRetry()}"
                    android:text="@string/retry"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_error_textview" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/search_empty_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_empty_text"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/search_loading_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>